2001-04-14  Christian Ruppert <arc@gmx.li>

	* uwm/windows.c: fixed static gravity (must be TitleHight instead of
	  TitleHeight/2)
	* uwm/nodes.h: added some comments for documentation, fixed
	  #define False
	* uwm/uwm.h: added member group to UltimateContext
	* uwm/properties.c: added UpdateWinGroup-call to UpdateWMHints
	* uwm/windows.c: added init for uc->group in UltimizeWin
	* uwm/properties.c: changed SetWinMapState to disenborder window in case
	  it is withdrawn.
	* uwm/handlers.c: existing withdrawn windows are no longer deultimized.
	* uwm/wingroups.h: new file
	* uwm/wingroups.c: new file
	* uwm/Makefile.am: added files wingroups.h and wingroups.c

2001-04-13  Christian Ruppert <arc@gmx.li>

	* uwm/uwm.h: removed UltimateContext.parent
	* uwm/windows.c: replaced uc->parent by TheScreen.root, remoced argument
	  parent from UltimizeWin()
	* uwm/handlers.c: removed parent arguments from UltimizeWin calls.
	* uwm/uwm.c: removed parent arguments from UltimizeWin calls.
	* uwm/windows.c: moved gravity handling out of window reparenting
	  routines
	* uwm/windows.h: added prototype and defines for GravitizeWin
	* uwm/handlers.c: added gravity handling in HandleConfigureRequest

2001-02-27  Christian Ruppert <arc@gmx.li>

	* config/urdb: added resources for rxvt

2001-02-24  Christian Ruppert <arc@gmx.li>

	* uwm/menu.c(DrawMenu): split into MapMenu and DrawMenuFrame
	* uwm/handlers.c(InitHandlers): added init for MenuExpose event handler.
	* uwm/menu.c(MenuExpose): added event handler
	* uwm/menu.c(MenuCreate): menu window flags are now set depending on
	  x-servers capability to do saveunder
	* uwm/menu.c(MenuCreate): menu window flags are now set depending on
	  x-servers capability to do backingstore
	* uwm/menu.c(AppendMenuItem): item window flags are now set depending on
	  x-servers capability to do backingstore
	* uwm/menu.c(MenuCreate): added ExposureMask to menu event mask
	* uwm/menu.c(MenuCreate): added pointer to menu structure as